[package]
name = "ratatui-comfy-tabs"
authors = ["ComfyHome™ <dev@comfyhome.io>"]
version = "0.5.11"
rust-version = "1.88"
edition = "2024"
description = "An advanced tab-bar navigation widget for Ratatui. Highly customizable, with built-in multi-position rendering logic."
license-file = "LICENSE.md"
keywords = ["navigation", "ratatui", "tabs", "tab-bar", "comfy"]
categories = ["command-line-interface"]
homepage = "https://gitlab.com/comfyhome/crates/ratatui-comfy-tabs"
repository = "https://gitlab.com/comfyhome/crates/ratatui-comfy-tabs"
readme = "README.md"
exclude = ["assets/*.gif"]

[package.metadata]
alt_repositary = "https://github.com/comfy-home/misc-RatatuiComfyTabs"
attributions = ["https://github.com/jharsono"]
attrib_timeline = ["ratatui-comfy-tabs v0.0.1 is based on ~300 LoC of tui-toaster v0.1.1"]
attrib_link = ["https://github.com/jharsono/tui-tabs"]

[workspace]

[dependencies]
ratatui-core = "0.1.2"
unicode-width = "0.2"

[dev-dependencies]
color-eyre = "0.6"
ratatui = { version = "0.30.2", features = ["crossterm"] }
